test/tests/stages/5_local_variables/valid/null_statement.lex
-- Lexing ... OK
+
+
@@ Tokens @@
List[8]:
  int
  identifier(main)
  (
  void
  )
  {
  ;
  }
