test/tests/stages/5_local_variables/invalid_semantics/undeclared_var.lex
-- Lexing ... OK
+
+
@@ Tokens @@
List[10]:
  int
  identifier(main)
  (
  void
  )
  {
  return
  identifier(a)
  ;
  }
